<resources>
    <string name="app_name">NutriScan</string>
    <string name="nutriscan">NutriScan</string>
    <string name="welcome1">Welcome to NutriScan let’s get health with NutriScan because we present to you how to get the best tips diet</string>
    <string name="welcome2">Welcome to NutriScan let’s get health with NutriScan because we present to you how to get the best tips diet</string>
    <string name="welcome3">Welcome to NutriScan let’s get health with NutriScan because we present to you how to get the best tips diet</string>
    <string name="login_account">Login Account</string>
    <string name="scan_object">Scan object with camera</string>

    <!--Bottom Navigation-->
    <string name="menu_title_bottom_nav_home">Home</string>
    <string name="menu_title_bottom_nav_journal">Journal</string>
    <string name="menu_title_bottom_nav_search">Search</string>
    <string name="menu_title_bottom_nav_profile">Profile</string>

    <!--Toolbar Navigation-->
    <string name="toolbar_menu_notification">Information</string>
    <string name="toolbar_menu_setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="halaman_home">Hello Halaman Home</string>
    <string name="halaman_journal">Hello Halaman Journal</string>
    <string name="halaman_profile">Hello Halaman Profile</string>
    <string name="halaman_search">Hello Halaman Search</string>
    <string name="take_a_photo">take a photo</string>
    <string name="frame_camera">Frame Camera</string>
    <string name="back_button">Back Button</string>
    <string name="framecenter">framecenter</string>

    <!--Home-->
    <string name="greeting">Hi Name</string>
    <string name="greeting2">It\'s Your Nutrition Journey</string>
    <string name="title_protein">Protein</string>
    <string name="protein_with_unit">%d %s</string>
    <string name="title_calorie">Calorie</string>
    <string name="calorie_with_unit">%d %s</string>
    <string name="title_sugar">Sugar</string>
    <string name="sugar_with_unit">%d %s</string>

    <!--Profile-->
    <string name="user_name">Name</string>
    <string name="your_email">Your Email</string>
    <string name="btn_edit">Edit Profile</string>
    <string name="background_profile">bg circle profile</string>
    <string name="profile_pict">avatar profile</string>
    <string name="scan_result">Scan Result</string>
    <string name="xx_calories">xx Calories</string>
    <string name="nama_konsumsi">Nama Konsumsi</string>
    <string name="get_started">Get Started</string>

    <!--Home-->
    <string name="background_home">bg softPink home</string>
    <string name="icon_cabbage">icon protein</string>
    <string name="icon_corn">icon calorie</string>
    <string name="icon_apple">icon sugar</string>
    <string name="banner1">Home Banner One</string>
    <string name="masukan_nama_makanan">Masukan nama makanan</string>
    <string name="mencari_nama_makanan">Mencari nama makanan</string>

    <!--Object Name-->
    <string-array name="data_name">
        <item>Orange Juice</item>
        <item>Lemonade</item>
    </string-array>

    <!--Object Name-->
    <string-array name="data_calorie">
        <item>45 Calorie</item>
        <item>47 Calorie</item>
    </string-array>

    <!--Photo-->
    <integer-array name="data_photo_detail">
        <item>@drawable/orangejuice</item>
        <item>@drawable/lemonade</item>
    </integer-array>

    <!--Login-->
    <string name="background_circle">background for login</string>
    <string name="title_log">Sign In</string>
    <string name="description_log">Welcome To NutriScan. Lets Scan, track, manage, and achieve your nutrition goals with our user-friendly app.</string>
    <string name="ti_email">Email</string>
    <string name="ti_pass">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="other_sign_in">or Sign In With</string>
    <string name="btn_sign_with_google">Google</string>
</resources>