<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/menu_title_bottom_nav_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_journal"
        android:icon="@drawable/baseline_calendar_today_24"
        android:title="@string/menu_title_bottom_nav_journal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_blank"
        android:enabled="false"
        android:title=" "
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/menu_title_bottom_nav_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/menu_title_bottom_nav_profile"
        app:showAsAction="ifRoom" />
</menu>