<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CameraActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/main_pink"
        android:contentDescription="@string/take_a_photo"
        android:src="@drawable/icuserscan"
        android:tintMode="@color/white"
        app:fabCustomSize="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="34dp" />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/framecam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/framecam"
        android:contentDescription="@string/frame_camera"
        app:layout_constraintBottom_toTopOf="@+id/fab_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/backbutton" />

    <ImageView
        android:id="@+id/rectframe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/framecam"
        android:contentDescription="@string/framecenter"
        app:layout_constraintEnd_toEndOf="@+id/framecam"
        app:layout_constraintStart_toStartOf="@+id/framecam"
        app:layout_constraintTop_toTopOf="@+id/framecam"
        app:srcCompat="@drawable/rectframe" />

</androidx.constraintlayout.widget.ConstraintLayout>